samples/_failures_safe/1761356529_97d394_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f36342d.c: In function ‘main’:
./samples/SAFE/__tmp_5f36342d.c:150:9: error: missing terminating " character
  150 |         "202
      |         ^~~~
./samples/SAFE/__tmp_5f36342d.c:150:9: error: expected expression at end of input
./samples/SAFE/__tmp_5f36342d.c:150:9: error: expected declaration or statement at end of input
